# math_server

./: .gitignore  CMakeLists.txt  README.md
.git-hooks/: commit-msg
.github/workflows/: commitlint.yml
src/: CMakeLists.txt  main.cpp
src/base/: BaseException.cpp  BaseException.h  LongNumber.cpp  LongNumber.h  LongNumberException.cpp  LongNumberException.h  NLongNumber.cpp  NLongNumber.h  NotImplementedException.cpp  NotImplementedException.h  Polynomial.cpp  Polynomial.h  PolynomialList.cpp  PolynomialList.h  PolynomialPair.cpp  PolynomialPair.h  README.md  RationalFraction.cpp  RationalFraction.h  ULongNumber.cpp  ULongNumber.h
src/module/: n.cpp  n.h  p.cpp  p.h  q.cpp  q.h  z.cpp  z.h
src/module/N/: n.cpp  n.h
src/module/P/: p.cpp  p.h
src/module/Q/: q.h
src/module/Z/: z.h
static/: asset-manifest.json  index.html
static/static/js/: 2.3ec137ed.chunk.js  2.6b31a6d2.chunk.js  2.6b31a6d2.chunk.js.map  2.96a663f9.chunk.js  2.d12b6a6e.chunk.js  main.047cfc22.chunk.js  main.0d2e7b69.chunk.js  main.14debb48.chunk.js  main.53ea6fb3.chunk.js  main.5bb3c7b5.chunk.js  main.5c1b6e34.chunk.js  main.83a19a52.chunk.js  main.a6713b99.chunk.js  main.b358b9e9.chunk.js  main.b358b9e9.chunk.js.map  main.b6683902.chunk.js  main.c846c0ac.chunk.js  main.f5aa0f7b.chunk.js  runtime-main.1f94fd49.js  runtime-main.1f94fd49.js.map
test/: CMakeLists.txt  main.cpp
test/base/: LongNumberTest.cpp  PolynomialTest.cpp  RationalFractionTest.cpp
test/module/: NTest.cpp  PTest.cpp  QTest.cpp  ZTest.cpp
